--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@ a:hover {
   cursor: pointer;
 }
 
+.active {
+  color: #FFCA61;
+}
+
 /*buttons*/
 .button{
   font-size: 15px;
